# esp32-rotary-encoder

./: CMakeLists.txt
